--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
     </div>
 
     <style>
-      * {
+      @media (max-width:720px) {
+        * {
         margin: 0;
         padding: 0;
         background-color: black;
@@ -89,6 +90,8 @@
     background: aquamarine;
     font-size: 80px;
     text-align: end;
+      }
+        
       }
     </style>
     <script>
