--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
         * {
         margin: 0;
         padding: 0;
+      }
+      body{
         background-color: black;
+
       }
       .calculator-body{
    
@@ -58,11 +61,11 @@
         
       }
       button{
-        width: 100px;
+        width: 35px;
     margin: 30px;
     border: none;
     background: transparent;
-    font-size: 80px;
+    font-size: 50px;
       }
       .num{
         color: grey;
